--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
             <div class="artwork-info-panel">
               <h2 class="artwork-detail-title">甄嬛重生来卖货</h2>
               <p class="artwork-detail-year">2025.06</p >
-              <p class="artwork-detail-technique">Claude模型全栈开发、RAG、智能客服系统、数字人直播MCP</p >
+              <p class="artwork-detail-technique">RAG、智能客服系统、数字人直播MCP</p >
               <div class="artwork-detail-description">
                 <p>当前电商行业竞争白热化的背景下，传统电商直播存在同质化严重、购物店铺用户粘性不足等问题。本项目通过融合大热IP文化、AI数字人技术和智能推荐系统，打造"大热IP+电商"沉浸式购物平台，给用户个性化的导购体验。</p >
                 <p style="margin-top: 15px; font-size: 0.9rem; color: #666;">In the context of intense competition in the e-commerce industry, traditional e-commerce livestreaming faces problems such as homogenization and insufficient user stickiness. This project integrates popular IP culture, AI digital human technology, and intelligent recommendation systems to create an immersive shopping platform that combines "popular IP + e-commerce", providing users with personalized shopping guidance experiences.</p >
@@ -1090,3 +1090,4 @@
   </script>
 </body>
 </html>
+
