--- a/index.html
+++ b/index.html
@@ -602,34 +602,28 @@
         </div>
         
         <div class="artwork-image-panel">
-          <div class="artwork-image-item" onclick="showEnlargedImage('ink-bamboo', 0)">
-            <img src="https://img.alicdn.com/imgextra/i2/O1CN012pfhJK21KU4vXHbSp_!!6000000006966-0-tps-2000-1125.jpg" alt="墨竹 1" class="artwork-main-image" />
+          <div class="artwork-video-container">
+            <iframe src="https://player.bilibili.com/player.html?bvid=BV15CePzuExn&autoplay=0&high_quality=1&danmaku=0" scrolling="no" frameborder="0" allow="autoplay; fullscreen" allowfullscreen style="width: 100%; height: 56.25vw; max-height: 60vh;"></iframe>
           </div>
-          <div class="artwork-image-item" onclick="showEnlargedImage('ink-bamboo', 1)">
+          <div class="artwork-image-item" onclick="showEnlargedImage('ink-bamboo', 0)">
             <img src="https://img.alicdn.com/imgextra/i3/O1CN01Cof9QO1epPf6PQRUh_!!6000000003920-0-tps-2000-1125.jpg" alt="墨竹 2" class="artwork-main-image" />
           </div>
-          <div class="artwork-image-item" onclick="showEnlargedImage('ink-bamboo', 2)">
+          <div class="artwork-image-item" onclick="showEnlargedImage('ink-bamboo', 1)">
             <img src="https://img.alicdn.com/imgextra/i1/O1CN011ii5c21jPNDs3RBnf_!!6000000004540-0-tps-2000-1125.jpg" alt="墨竹 3" class="artwork-main-image" />
           </div>
-          <div class="artwork-image-item" onclick="showEnlargedImage('ink-bamboo', 3)">
-            <img src="https://img.alicdn.com/imgextra/i3/O1CN01Eivaai2723qDvIjND_!!6000000007738-0-tps-2000-1125.jpg" alt="墨竹 4" class="artwork-main-image" />
-          </div>
-          <div class="artwork-image-item" onclick="showEnlargedImage('ink-bamboo', 4)">
-            <img src="https://img.alicdn.com/imgextra/i3/O1CN01goOvji1rj5C0ZoIZH_!!6000000005666-0-tps-2000-1125.jpg" alt="墨竹 5" class="artwork-main-image" />
-          </div>
-          <div class="artwork-image-item" onclick="showEnlargedImage('ink-bamboo', 5)">
+          <div class="artwork-image-item" onclick="showEnlargedImage('ink-bamboo', 2)">
             <img src="https://img.alicdn.com/imgextra/i3/O1CN01acJhK51fGR1vfZnIN_!!6000000003979-0-tps-2000-1125.jpg" alt="墨竹 6" class="artwork-main-image" />
           </div>
-          <div class="artwork-image-item" onclick="showEnlargedImage('ink-bamboo', 6)">
+          <div class="artwork-image-item" onclick="showEnlargedImage('ink-bamboo', 3)">
             <img src="https://img.alicdn.com/imgextra/i4/O1CN01MRSHQ31Dc8YPoujyu_!!6000000000236-0-tps-2000-1125.jpg" alt="墨竹 7" class="artwork-main-image" />
           </div>
-          <div class="artwork-image-item" onclick="showEnlargedImage('ink-bamboo', 7)">
+          <div class="artwork-image-item" onclick="showEnlargedImage('ink-bamboo', 4)">
             <img src="https://img.alicdn.com/imgextra/i2/O1CN01UBdg111Ve7Lu6ujPv_!!6000000002677-0-tps-2000-1125.jpg" alt="墨竹 8" class="artwork-main-image" />
           </div>
-          <div class="artwork-image-item" onclick="showEnlargedImage('ink-bamboo', 8)">
+          <div class="artwork-image-item" onclick="showEnlargedImage('ink-bamboo', 5)">
             <img src="https://img.alicdn.com/imgextra/i2/O1CN01GGNJ7m1eB6oArxKVq_!!6000000003832-0-tps-2000-1125.jpg" alt="墨竹 9" class="artwork-main-image" />
           </div>
-          <div class="artwork-image-item" onclick="showEnlargedImage('ink-bamboo', 9)">
+          <div class="artwork-image-item" onclick="showEnlargedImage('ink-bamboo', 6)">
             <img src="https://img.alicdn.com/imgextra/i3/O1CN019AM7Qx1XjH2j4ErKJ_!!6000000002959-0-tps-2000-1125.jpg" alt="墨竹 10" class="artwork-main-image" />
           </div>
         </div>
@@ -884,11 +878,8 @@
       'ink-bamboo': {
         title: '墨竹',
         images: [
-          'https://img.alicdn.com/imgextra/i2/O1CN012pfhJK21KU4vXHbSp_!!6000000006966-0-tps-2000-1125.jpg',
           'https://img.alicdn.com/imgextra/i3/O1CN01Cof9QO1epPf6PQRUh_!!6000000003920-0-tps-2000-1125.jpg',
           'https://img.alicdn.com/imgextra/i1/O1CN011ii5c21jPNDs3RBnf_!!6000000004540-0-tps-2000-1125.jpg',
-          'https://img.alicdn.com/imgextra/i3/O1CN01Eivaai2723qDvIjND_!!6000000007738-0-tps-2000-1125.jpg',
-          'https://img.alicdn.com/imgextra/i3/O1CN01goOvji1rj5C0ZoIZH_!!6000000005666-0-tps-2000-1125.jpg',
           'https://img.alicdn.com/imgextra/i3/O1CN01acJhK51fGR1vfZnIN_!!6000000003979-0-tps-2000-1125.jpg',
           'https://img.alicdn.com/imgextra/i4/O1CN01MRSHQ31Dc8YPoujyu_!!6000000000236-0-tps-2000-1125.jpg',
           'https://img.alicdn.com/imgextra/i2/O1CN01UBdg111Ve7Lu6ujPv_!!6000000002677-0-tps-2000-1125.jpg',
@@ -1090,4 +1081,3 @@
   </script>
 </body>
 </html>
-
